# ProgramacionEstructurasLineales

./: README.md
ac_origins/: CMakeLists.txt  main.cpp
actividad_cierre1/: CMakeLists.txt  lord_of_the_rings.jsonl  main.cpp
actividad_cierre2/: CMakeLists.txt  code_c.txt  code_i.txt  main.cpp
algoritmos-particion/: CMakeLists.txt  main.cpp
algoritmos1/: CMakeLists.txt  main.cpp
async/: CMakeLists.txt  main.cpp
basicos/: CMakeLists.txt  main.cpp
beatles_contenedor_asociativo/: CMakeLists.txt  main.cpp
complejidad-algoritmica/: CMakeLists.txt  main.cpp
constructores/: CMakeLists.txt  main.cpp
csv/: CMakeLists.txt  main.cpp
desafio_grupal 2/: CMakeLists.txt  main.cpp
desafio_grupal_1/: CMakeLists.txt  main.cpp
dinosaurios-smart-pointers/: CMakeLists.txt  main.cpp
extra-files/: match.hpp  read_cin.hpp
list/: CMakeLists.txt  main.cpp
localidad-memoria/: CMakeLists.txt  main.cpp
palindromo/: CMakeLists.txt  main.cpp
pila/: CMakeLists.txt  main.cpp
pointers/: CMakeLists.txt  main.cpp
previa-trabajo1/: CMakeLists.txt  main.cpp
prueba/: CMakeLists.txt  main.cpp
prueba-integradora/: CMakeLists.txt  main.cpp
pruebaBibliotecas/: CMakeLists.txt  main.cpp
punteros-inteligentes/: CMakeLists.txt  main.cpp
queue/: CMakeLists.txt  main.cpp
range-v3/: CMakeLists.txt  main.cpp
rectangle/: CMakeLists.txt  main.cpp
recursividad/: CMakeLists.txt  main.cpp
sesion-colaborativa-amazon-profesor/: CMakeLists.txt  main.cpp
sesion_colaborativa_presis_usa/: CMakeLists.txt  american_presidents.jsonl  main.cpp
user_stack/: CMakeLists.txt  (+1 more)
(+20 files in other folders)
